--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-image: url(https://camo.githubusercontent.com/ca15308dca8f230f07366cb99ba112accbc266e9a44996dce8a7f178386ade08/68747470733a2f2f692e696d6775722e636f6d2f4b7555753536562e676966);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 113, 218);
 }
 
 .App-link {
