--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,4 +1,6 @@
 /* contains Header, Nav */
+
+
 .home_container{
     margin: 0 15px;
     display: flex;
@@ -6,18 +8,19 @@
     justify-content: space-between;
     flex-wrap: wrap;
     align-content: center;
-   /* align-items: center; */
 }
 /* HEADER */
+
+.header_link{
+  text-decoration: none;
+}
+
 .header_container {
-    /* margin: auto; */
-    /* background-color: #282c34; */
-    /* background-image: url(https://camo.githubusercontent.com/ca15308dca8f230f07366cb99ba112accbc266e9a44996dce8a7f178386ade08/68747470733a2f2f692e696d6775722e636f6d2f4b7555753536562e676966); */
-    /* min-height: 100vh; */
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    justify-content: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: flex-start;
     font-size: calc(10px + 2vmin);
     color: rgb(0, 0, 0);
   }
@@ -30,6 +33,7 @@
 .header_container p{
     margin: 0;
     text-transform: capitalize;
+    font-size: medium;
   }
 
 /* NAV */
