--- a/src/Styles/Portfolio.css
+++ b/src/Styles/Portfolio.css
@@ -35,3 +35,14 @@
 .card_description p:nth-child(1){
     text-transform: capitalize;
 }
+
+.assets{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.assets p {
+    font-size: medium;
+    text-transform: capitalize;
+}
