--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -9,3 +9,12 @@
 .about p{
     text-align: justify;
 }
+
+.mail-about{
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    position: absolute;
+    top: 3.5%;
+    left: 43%;
+}
