--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* html{
+  background-image: url(https://user-images.githubusercontent.com/9216979/45744864-d3d7f400-bbff-11e8-9e3e-0bee1d2f5865.gif);
+} */
+
 body {
   margin: 0;
   /* font-family: 'Roboto', sans-serif; */
