--- a/src/Styles/Mail.css
+++ b/src/Styles/Mail.css
@@ -1,19 +1,27 @@
 /* MAIL */
 
+article{
+  margin: 10% auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .mail {
-    display: flex;
-    text-decoration: none;
+    /* display: flex; */
+    /* text-decoration: none; */
     /* width: 100%; */
-    height: 600px;
+    /* height: 600px; */
     /* color: black; */
     /* font-weight: bold; */
-    margin: auto;
+    /* margin: auto; */
     /* align-self: center; */
     /* position: absolute; */
     /* top: 50%; */
     /* left: 43%; */
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
 
     background: url(https://cutewallpaper.org/27/bokeh-wallpaper-gif/75-wall-%C3%BD-t%C6%B0%E1%BB%9Fng-h%C3%ACnh-n%E1%BB%81n-h%C3%ACnh-%E1%BA%A3nh-nh%E1%BA%A1c-tr%E1%BB%AF-t%C3%ACnh.gif);
     /* background-size: 100%; */
